Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL)
-
None
Description
The SQL error plugin prints (null) as database if the mariadb client is not using any database to execute the SQL. I think it should print an empty string if the client is not using any database
MariaDB [(none)]> drop database db; |
ERROR 1008 (HY000): Can't drop database 'db'; database doesn't exist |
MariaDB [(none)]>
|
 |
$ cat data/sql_errors.log
|
5 (null) 2023-11-29 5:53:31 root[root] @ localhost [] ERROR 1008: Can't drop database 'db'; database doesn't exist : drop database db |
$
|
Attachments
Issue Links
- is caused by
-
MDEV-27087 Add thread ID and database / table, where the error occured to SQL error plugin
-
- Closed
-